# belajar-django-modular

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/django_modular/: settings.py  urls.py  wsgi.py
src/django_modular/django_modular/: asgi.py  settings.py  urls.py
src/userSettings/: apps.py
