[project]
name = "django_hello_world"
version = "0.1.0"
description = "Belajar Django Modular"
authors = [
    {name = "KyoMel", email = "michaellapandio04@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
